# vireo_rhi

./: .gitignore  CMakeLists.txt  README.md  shaders.hlsl
cmake/: compile_options.cmake  libraries.cmake  shaders.cmake  std.cmake
docs/: 000_build.md  000_vireo.md  001_tutorial_triangle.md  020_tutorial_triangle.md  100_concepts.md  custom.css  doxypress.json  gen_lua_docs.py  layout_default.xml  lua-header.html  lua_api.dox  mainpage.dox  mainpage.md  navtree.js
docs/about/: 00_about.dox
docs/getting_started/: 000_getting_started.dox  010_build.dox
docs/getting_started/020_tutorial_1/: 00_tutorial_1.dox  01_devenv.dox  02_project.dox  03_vireo_class.dox  04_queues.dox  05_swapchain.dox  06_commands.dox  07_renderpass.dox  08_viewport.dox  09_vertex_data.dox  10_pipeline.dox  11_shaders.dox  12_pipeline_config.dox  13_drawing.dox  14_conclusion.dox
docs/manual/: 000_manual.dox  010_vireo_class.dox  020_devices.dox  030_00_resources.dox  030_01_resources.dox  030_02_resources.dox  030_03_resources.dox  030_resources.dox  040_00_descriptors.dox  040_01_descriptor_layout.dox  040_02_descriptor_set.dox  040_03_pipeline_resources.dox  040_03_push_constants.dox  040_04_pipeline_resources.dox  050_00_commands.dox  060_00_queues.dox  070_00_shaders.dox  080_00_pipelines.dox  080_01_graphic_pipelines.dox  080_02_compute_pipelines.dox  090_00_synchronization.dox  090_01_fences.dox  090_02_semaphores.dox  090_03_barriers.dox  100_00_renderpass.dox  110_00_swapchain.dox  120_00_viewports.dox
include/: DX12Tools.h  DXLibraries.h  DXTools.h  Libraries.h  Tools.h  VKLibraries.h  VKTools.h  Win32Application.h  helpers.h  libraries.h  vulkan.h
include/backend/directx/: Tools.h
include/backend/vulkan/: Tools.h
include/vireo/: Libraries.h  Tools.h
include/vireo/backend/directx/: Libraries.h  Tools.h
include/vireo/backend/vulkan/: Libraries.h  Tools.h  Vulkan.h
src/: Application.cpp  Application.cppm  Application.ixx  BaseApplication.cpp  BaseApplication.cppm  Configuration.ixx  DX12Application.cpp  DX12Application.cppm  DXApplication.cpp  DXApplication.cppm  DXApplication.ixx  DXSample.cpp  Descriptors.ixx  Device.ixx  FrameData.ixx  Platform.ixx  RenderingBackEnd.ixx  Resources.ixx  Tools.ixx  VKApplication.cpp  VKApplication.cppm  Vireo.cpp  Vireo.ixx  Win32Application.cpp  Win32Application.cppm  Win32Application.ixx  app.cppm  app2.cppm  application.cpp  application.cppm  main.cpp  renderer.cppm  vulkan.cpp
src/backend/: Buffer.ixx  DXRenderingBackEnd.cpp  DXRenderingBackEnd.cppm  Descriptors.cpp  Descriptors.ixx  Device.ixx  FrameData.cppm  FrameData.ixx  RenderingBackEnd.cppm  RenderingBackEnd.ixx  Resources.ixx  Samplers.ixx  VKRenderingBackEnd.cpp  VKRenderingBackEnd.cppm
src/backend/directx/: DXBuffer.cpp  DXBuffer.ixx  DXDescriptors.cpp  DXDescriptors.ixx  DXDevice.cpp  DXDevice.ixx  DXFrameData.cppm  DXFrameData.ixx  DXRenderingBackEnd.cpp  DXRenderingBackEnd.cppm  DXRenderingBackEnd.ixx  DXResources.cpp  DXResources.ixx  DXSamplers.cpp  DXSamplers.ixx
src/backend/vulkan/: VKBuffer.cpp  VKBuffer.ixx  VKDescriptors.cpp  VKDescriptors.ixx  VKDevice.cpp  VKDevice.ixx  VKFrameData.cppm  VKFrameData.ixx  VKRenderingBackEnd.cpp  VKRenderingBackEnd.cppm  VKRenderingBackEnd.ixx  VKResources.cpp  VKResources.ixx  VKSamplers.cpp  VKSamplers.ixx  Vulkan.cpp
src/bindings/lua/: LuaBindings.cpp  LuaBindings.ixx  LuaBridge.ixx  vireo.lua
src/directx/: DXCommands.cpp  DXCommands.ixx  DXDescriptors.cpp  DXDescriptors.ixx  DXDevice.cpp  DXDevice.ixx  DXDevices.cpp  DXDevices.ixx  DXFrameData.ixx  DXPipelines.cpp  DXPipelines.ixx  DXRenderingBackEnd.cpp  DXRenderingBackEnd.ixx  DXResources.cpp  DXResources.ixx  DXSwapChains.cpp  DXSwapChains.ixx  DXTools.ixx  DXVireo.cpp  DXVireo.ixx
src/lua/: LuaBindings.cpp  LuaBindings.ixx  LuaBridge.ixx  vireo.lua
src/os/windows/: Win32Application.cpp  Win32Application.ixx  WinMain.cpp
src/shaders/: dummy.slang  shaders1.hlsl  shaders2.hlsl
src/vulkan/: VKCommands.cpp  VKCommands.ixx  VKDescriptors.cpp  VKDescriptors.ixx  VKDevice.cpp  VKDevice.ixx  VKDevices.cpp  VKDevices.ixx  VKFrameData.ixx  VKPipelines.cpp  VKPipelines.ixx  VKRenderingBackEnd.cpp  VKRenderingBackEnd.ixx  VKResources.cpp  VKResources.ixx  VKSwapChains.cpp  VKSwapChains.ixx  VKTools.ixx  VKVireo.cpp  VKVireo.ixx  Vulkan.cpp
